--- a/insta/grafica.css
+++ b/insta/grafica.css
@@ -1,8 +1,11 @@
 body{
     margin-top: 100px;
-    margin-left: 250px;
+    margin-left: 100px;
+    margin-right: auto;
     background: linear-gradient(45deg, yellow, rgba(255, 0, 0, 0.815), rgb(174, 0, 255));
     display: flex;
+    height: 900px;
+    
 }
 #tel{
     border-radius: 60px;
@@ -10,6 +13,43 @@ body{
     width: 400px;
     height: 850px;
     background-color: white;
+    box-shadow: 5px 5px 20px black;
+}
+
+#filp-tel {
+    width: 420px;
+    height: 870px;
+    perspective: 1000px;
+    margin-left: 200px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    transform-origin: center;
+}
+
+#filp-tel:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.flip-card-back {
+    transform: rotateY(180deg);
+    /* Retro del telefono */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 #cover{
@@ -349,9 +389,17 @@ h2{
     border: 1px solid black;
     width: 3px;
     height: 120px;
-    margin-top: 170px;
+    margin-top: -700px;
+    margin-right: -9px;
     background-color: black;
     border-radius: 0 3px 3px 0;
+}
+
+#puls{
+    width: 3px;
+    float: left;
+    margin-left: -4px;
+    margin-top: 160px;
 }
 
 #not{
@@ -359,7 +407,6 @@ h2{
     width: 3px;
     height: 27px;
     background-color: black;
-    margin-top: 168px;
     border-radius: 3px 0 0 3px;
 }
 
@@ -370,7 +417,7 @@ h2{
     height: 40px;
     margin-top: 14px;
     background-color: black;
-    border-radius: 3px 0 0 3px;    
+    border-radius: 3px 0 0 3px;  
 }
 
 #giu{
@@ -380,4 +427,129 @@ h2{
     margin-top: 5px;
     background-color: black;
     border-radius: 3px 0 0 3px;
+}
+
+#retro{
+    border-radius: 60px;
+    border: 10px solid black;
+    width: 400px;
+    height: 850px;
+    background: radial-gradient(circle at center, white 0%, rgb(175, 150, 150) 50%,rgb(126, 13, 255) 100%);
+    background-color: white;
+    box-shadow: 5px 5px 20px black;
+    position: relative;
+}
+
+#coverr{
+    border-radius: 62px;
+    border: 1px solid rgb(129, 117, 117);
+    width: 420px;
+    height: 870px;
+    margin-top: -12px;
+    margin-left: -12px;
+}
+#fotocamera{
+    border: 4px solid black;
+    box-shadow: 0 0 10px black;
+    width: 140px;
+    height: 140px;
+    border-radius: 40px;
+    margin-left: 30px;
+    margin-top: 30px;
+    position: relative;
+    background: radial-gradient(circle at center, black%, rgb(175, 150, 150) 50%, white 100%);
+}
+
+#fot1{
+    position: absolute;
+    border: 3px solid gray;
+    width: 52px;
+    height: 52px;
+    border-radius: 100%;
+    margin-top: 14px;
+    margin-left: 14px;
+    background: radial-gradient(circle at center, blue 0%,black 50%,black 100%);
+}
+
+#fot2{
+    position: absolute;
+    border: 3px solid gray;
+    width: 52px;
+    height: 52px;
+    border-radius: 100%;
+    margin-top: 70px;
+    margin-left: 70px;
+    background: radial-gradient(circle at center, blue 0%,black 50%,black 100%);
+}
+
+#led{
+    position: absolute;
+    border: 1px solid black;
+    width: 25px;
+    height: 25px;
+    border-radius: 100%;
+    margin-top: 19px;
+    margin-left: 93px;
+    background: radial-gradient(circle at center, rgb(255, 255, 255) 10%,rgb(255, 253, 113)  60%,rgba(255, 255, 255, 0.815)  100%);
+}
+
+#i{
+    position: absolute;
+    border: 1px solid black;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    margin-top: 96px;
+    margin-left: 31px;
+    background-color: gray;
+}
+
+#pulsr{
+    width: 3px;
+    float: left;
+    margin-left: 410px;
+    margin-top: -700px;
+}
+
+#notr{
+    border: 1px solid black;
+    width: 3px;
+    height: 27px;
+    background-color: black;
+    border-radius:  0 3px 3px 0;
+}
+
+#sur{
+    border: 1px solid black;
+    width: 3px;
+    width: 3px;
+    height: 40px;
+    margin-top: 14px;
+    background-color: black;
+    border-radius: 3px 0 0 3px;  
+}
+
+#giur{
+    border: 1px solid black;
+    width: 3px;
+    height: 40px;
+    margin-top: 5px;
+    background-color: black;
+    border-radius: 3px 0 0 3px;
+}
+
+#pulaccr{
+    float: right;
+    border: 1px solid black;
+    width: 3px;
+    height: 120px;
+    margin-top: 160px;
+    margin-right: 410px;
+    background-color: black;
+    border-radius: 3px 0 0 3px;
+}
+
+svg{
+    margin-top: 8px;
+    margin-left: 100px;
 }
